# refman

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  LICENSE  README.md  install.sh  rustfmt.toml
.github/workflows/: release.yml  rust-ci.yml
src/: cli.rs  data.rs  downloads.rs  errors.rs  lib.rs  main.rs  prelude.rs  project.rs  validate.rs
