[package]
name = "refman"
version = "1.3.1"
edition = "2021"
description = "A command-line manager for bespoke reference datasets used in bioinformatic analyses"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
readme = "README.md"
license = "MIT"
rust-version = "1.85.0"
repository = "https://github.com/nrminor/refman"
homepage = "https://github.com/nrminor/refman"
documentation = "https://github.com/nrminor/refman/blob/main/README.md"
keywords = ["science", "reproducibility", "bioinformatics", "data"]
categories = ["command-line-utilities", "science"]
exclude = []

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2" }
color-eyre = "0.6.3"
dirs = "6.0.0"
fern = { version = "0.7.1", features = ["colored"] }
flate2 = "1.1.0"
futures = "0.3.31"
fxhash = "0.2.1"
gb-io = "0.8.0"
gfa = "0.10.1"
indicatif = { version = "0.17.11", features = ["futures", "tokio", "rayon"] }
jiff = { version = "0.2.4", features = ["serde", "logging"] }
log = "0.4.26"
lychee-lib = "0.18.1"
md5 = "0.7.0"
noodles = { version = "0.95.0", features = ["async", "bed", "core", "fasta", "gff", "gtf"] }
prettytable = "0.10.0"
rayon = "1.10.0"
reqwest = { version = "0.12.14", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
toml_edit = { version = "0.22.24", features = ["perf", "serde"] }
url = "2.5.4"

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
incremental = true
panic = "abort"
strip = "symbols"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.19.1"
